# interior-designer

./: .gitignore  Implementation_C方案_React實作規格.md  Makefile  README.md  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml
agent/: .env.example  README.md  pyproject.toml  run_poc.py
agent/installer/: build_pkg.sh  launch_agent.plist  notarize.sh
agent/renderstudio_agent/: __main__.py  api_client.py  config.py  diag_server.py  heartbeat.py  poller.py  state_machine.py  updater.py  utils.py
agent/renderstudio_agent/parsers/: door_window.py  dwg_converter.py  dxf_parser.py  plan_elevation_merge.py  room_detector.py  wall_extractor.py
agent/renderstudio_agent/sketchup/: asset_sync.py  controller.py
agent/renderstudio_agent/sketchup/ruby_scripts/: apply_materials.rb  generate_model.rb  place_furniture.rb  render.rb
agent/renderstudio_agent/vray/: adapter.py  style_to_vray.py
agent/renderstudio_agent/vray/presets/: draft.json  premium.json  standard.json
agent/rust_geometry/: Cargo.toml
agent/rust_geometry/src/: lib.rs
agent/tests/: test_state_machine.py
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0003_share_tokens.py
backend/app/: config.py  db.py  deps.py  main.py  seed_styles.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  agent.py  audit_log.py  file.py  project.py  render.py  share_token.py  space.py  style.py  user.py
backend/app/routers/: agents.py  auth.py  projects.py  renders.py  share.py  spaces.py  stream.py  style.py  uploads.py
backend/app/schemas/: common.py  style.py
backend/app/services/: job_dispatcher.py  slack.py  sse_broker.py  storage.py  style_engine.py
backend/app/tasks/: celery_app.py  notifications.py
backend/scripts/: export_style_schema.py
backend/tests/: test_healthz.py  test_style_schema.py
docs/: Runbook.md  UserManual.md
frontend/: .env.example  Dockerfile  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: error.tsx  layout.tsx  not-found.tsx
infra/: alert_rules.yml  backup.sh  crontab.txt  docker-compose.dev.yml  prometheus.yml
shared/: style_schema.json
(+56 files in other folders)
