[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renderstudio-agent"
version = "0.1.0"
description = "RenderStudio local Agent (macOS, SketchUp + V-Ray)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "ezdxf>=1.3",
  "anyio>=4.3",
  "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]
# 幾何計算熱點 Rust 擴充；未裝 Rust toolchain 時可跳過
rust = ["maturin>=1.5"]

[project.scripts]
renderstudio-agent = "renderstudio_agent.__main__:run"

[tool.setuptools.packages.find]
include = ["renderstudio_agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
